# otus-homework3

./: .gitignore  CMakeLists.txt  version.h  version.h.in
.github/workflows/: linux.yml
src/: CMakeLists.txt  MyList.h  memory_allocator.cpp
